# snack-launcher

./: .gitignore  README.md  pyproject.toml
src/snack_launcher/: __init__.py  cli.py  detector.py  geometry.py
tests/: test_cli.py  test_detector.py  test_geometry.py
