[project]
name = "snack-launcher"
version = "0.1.0"
description = "Webcam mouth detector prototype for a snack-launching desk robot."
readme = "README.md"
authors = [
    { name = "Jason Lin", email = "jclin2.2009@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "opencv-contrib-python>=4.13.0.92",
]

[project.scripts]
snack-mouth-detector = "snack_launcher.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
